# PeakBot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
AnacondaEnvironment/: Debian11_python38_noGPU.yml  Debian11_python38_withGPU.yml  Devian11_python38_noGPU.yml  Windows10_python38.yml  Windows10_python38_noGPU.yml
src/peakbot/: Chromatogram.py  MSScan.py  __init__.py  core.py  cpu.py  cuda.py  numpy.py  peakbot.py
src/peakbot.egg-info/: PKG-INFO  SOURCES.txt
src/peakbot/train/: __init__.py  core.py  cpu.py  cuda.py
