[metadata]
name = peakbot
version = 0.4.6
author = Christoph Bueschl
author_email = christoph.bueschl@univie.ac.at
description = A machine-learning CNN model for peak picking in profile mode LC-HRMS data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TODO
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src