[metadata]
name = peakbot
version = 0.4.6
author = Christoph Bueschl
author_email = christoph.bueschl [the little email symbol] univie.ac.at
description = A machine-learning CNN model for peak picking in profile mode LC-HRMS data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christophuv/PeakBot
project_urls =
    Bug Tracker = https://github.com/christophuv/PeakBot/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src